docs/2.0/manual/dop/guides/deploy/release.md
# 制品

## 制品分类

制品的分类可从不同维度进行划分。

### 应用制品和项目制品

应用制品包含部署一个应用所需的全部内容，包括镜像、依赖的 Addon 以及各类配置信息。

项目制品则是由一个或多个应用制品按照一定部署顺序组成的制品。部署项目制品时，平台将根据您定义的部署顺序，分批部署该制品中引用的应用制品。

### 临时制品和非临时制品

通过流水线创建应用制品时，若制品版本或代码分支符合以下条件之一，则创建的制品为非临时制品，否则即为临时制品：

- 在 Release Action 中填写 `tag_version`。

- 代码分支符合以下格式（即以 `release/` 为前缀，后缀部分符合 [语义化版本 2.0.0](https://semver.org/lang/zh-CN/) 规范）。

  ```text
  release/{[v]主版本号}.{次版本号}[.修订版本号][-先行版本号][+版本无关的构建信息]
  ```

平台每日进行垃圾回收，回收创建于 72 小时前且当前无引用的临时制品及其镜像，非临时制品则不会被回收。

创建项目制品时，仅可引用非临时制品，且项目制品也为非临时制品。

进入 **DevOps 平台 > 项目 > 应用中心 > 制品**，可查看并管理该项目下的所有非临时制品。

![](http://terminus-paas.oss-cn-hangzhou.aliyuncs.com/paas-doc/2022/02/28/e0112765-b1ab-40c0-ae2c-50bb10caf4fb.png)

临时制品仅可在创建该制品的流水线上，通过 Release Action 的链接查看。

![](http://terminus-paas.oss-cn-hangzhou.aliyuncs.com/paas-doc/2022/02/28/96bc7a77-17f8-4123-8138-68429d68359f.png)

### 正式制品/非正式制品

所有制品在创建后均为非正式制品，您可在 **应用中心 > 制品** 中将指定制品转为正式版。转正后的制品即为正式制品。

正式制品表示该制品为正式版本，不可修改（包括编辑、删除或转正）。

## 创建制品
创建制品前请先完成项目的集群设置和分支规则配置。

* 进入 **DevOps 平台 > 项目 > 项目设置 > 通用设置 > 项目信息** 设置集群。

* 进入 **DevOps 平台 > 项目 > 项目设置 > 代码仓库 > 分支规则** 创建分支规则。

### 创建应用制品

当前应用制品仅支持通过 Release Action 创建。

![](http://terminus-paas.oss-cn-hangzhou.aliyuncs.com/paas-doc/2022/03/01/bfae5b18-f7d3-4671-8d73-15705d78f005.png)

1. 进入 **应用中心 > 应用 > 代码**，创建流水线文件，添加 Action（任务类型 > 应用打包发布制品）并填写配置参数。

2. 进入 **应用中心 > 应用 > 流水线**，选择分支和流水线，点击 **新建流水线**，完成构建后执行流水线。

3. 流水线执行成功即代表制品创建成功。

流水线将根据所在分支匹配分支规则，确认制品部署环境。

### 创建项目制品

项目制品支持通过选择应用创建或上传文件创建。

进入 **DevOps 平台 > 项目 > 应用中心 > 制品 > 项目制品**，点击右上角 **新建制品**，选择创建方式。

![](http://terminus-paas.oss-cn-hangzhou.aliyuncs.com/paas-doc/2022/02/28/d073662a-2e4f-4426-aaa0-0989bad8466f.png)

* **选择应用创建**

  1. 输入版本。版本是项目制品在项目维度下的唯一标识，不可与其他项目制品版本重复，可由英文字母、数字、下划线（_）、中划线（-）及句点（.）组成。

  2. 选择应用制品（需提前在本项目的应用下创建应用制品）。您可对应用制品进行分组。在部署过程中，同组的应用制品无先后顺序，不同组的应用制品则根据编号顺序进行部署。

     例如，应用制品 A 依赖于应用制品 B，选择应用制品时，可将应用制品 B 设为第一组，应用制品 A 设为第二组，则部署时制品 B 将先于制品 A 部署。此外，同一应用下的制品不可重复选择。

  3. 填写内容。内容即对该项目制品的描述，可以是 Changelog 或备注信息，支持 Markdown 语法。

  4. 点击 **提交**，完成项目制品创建。

  ![](http://terminus-paas.oss-cn-hangzhou.aliyuncs.com/paas-doc/2022/03/01/e766b065-1d06-43ac-9219-11b07f5d81bd.png)

* **选择文件创建**

  该方式用于满足将项目制品从某一项目导入至另一项目的场景。若选择文件创建，需提前下载项目制品包（ZIP 格式）至本地（具体请参见 [下载制品](#下载制品)），随后在目标项目中上传该文件。

  平台将自动解析文件中项目制品的版本及依赖的应用制品信息。

  ![](http://terminus-paas.oss-cn-hangzhou.aliyuncs.com/paas-doc/2022/02/28/4e643be5-d490-4cd2-849c-c0ced3a93773.png)

  :::tip 提示

  * 上传的项目制品中引用的应用制品，其对应应用必须存在于本项目中，否则将上传失败。
  * 若本项目中不存在上传的项目制品引用的应用制品，则平台将根据制品包的内容自动创建应用制品。若已存在相同版本的应用制品，则取消创建，直接引用该应用制品。若制品包中应用制品的 dice.yml 与已存在的同名应用制品的 dice.yml 不同，则制品包中的 dice.yml 将被忽略。

  :::

## 制品操作

在制品页面，您可对制品进行删除、下载、编辑等操作。

![](http://terminus-paas.oss-cn-hangzhou.aliyuncs.com/paas-doc/2022/02/28/537761b0-ffce-415d-b5ca-8fdfbf60f2d6.png)

其中，非正式制品支持转为正式版和删除的批量操作。

![](http://terminus-paas.oss-cn-hangzhou.aliyuncs.com/paas-doc/2022/02/28/98af2305-de3f-44fa-9883-a4a2b43055dd.png)

### 删除制品

* **应用制品**

  如需删除应用制品，则该应用制品需满足以下条件：

  * 当前无该应用制品部署的 Runtime。
  * 无项目制品引用该应用制品。
  * 该应用制品为非正式版。

  删除应用制品后，该应用制品的镜像也将从镜像仓库中删除。

* **项目制品**

  非正式项目制品均可删除。

### 下载制品

仅项目制品支持下载。

点击 **下载**，您将得到一个 ZIP 格式的文件，其中包含项目制品及其引用的应用制品的信息。您可在平台的其他项目环境中上传该制品包以创建新的项目制品。

### 编辑制品

仅非临时、非正式制品支持编辑。

* **应用制品**：支持修改版本和内容。
* **项目制品**：支持修改版本、应用制品和内容。

### 转正制品

仅非临时、非正式制品支持转为正式版。

应用制品或项目制品转为正式版后，将不可修改（包括编辑、删除或转正）。

若项目制品转为正式版，其引用的非正式应用制品也将自动转为正式版。

### 查看引用制品

仅项目制品支持查看引用制品。

点击 **查看引用制品**，页面将跳转至应用制品，并展示该项目制品引用的所有应用制品。
